# crewtimer-video-review

./: .eslintrc.js  .gitattributes  .gitignore  INTERNALS.md  README-opencv.md  README.md  README.orig.md  package-lock.json  package.json
.erb/configs/: webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.erb/scripts/: Notarize.js  clean.js  delete-source-maps.js  electron-rebuild.js
assets/: CrewTimer.lss  assets.d.ts  icon.icns
assets/icons/: make_icons.sh
data/: r12924-mobile.json
native/ffreader/: .gitignore  README.md  binding.gyp  index.d.ts  index.js  package.json  tsconfig.json
native/ffreader/scripts/: Cygwin-vstudio.bat  MSYS-vstudio.bat  build-ffmpeg.sh  build-opencv.sh  dump-vs-env.bat  make-env.js  patch-config-mak.js
native/ffreader/src/: CubicSpline.hpp  FFReader.cpp  FFReader.hpp  FFReaderAPI.cpp  FrameUtils.cpp  (+5 more)
native/ffreader/src/detector/: CMakeLists.txt  YOLOv8Detector.hpp  main.cpp
native/ffreader/src/detector/test/: showfail.sh
release/app/: package-lock.json  package.json
resources/mac-x86/: libopencv_video.dylib
scripts/: extractTS.py  track_boatv2.cpp
src/: CHANGELOG.md
src/assets/: Thumbs.db
src/main/: assets.ts  main-settings.ts  main.ts  mainWindow.ts  menu.ts  preload.ts
src/renderer/: App.global.css  App.tsx  Blinking.tsx  Blowup.tsx  CenteredTabs.tsx  FLSetup.tsx  FileList.tsx  FinishLynxHelp.tsx  InitProgress.tsx  LapList.tsx  NagScreen.tsx  Nav.tsx  Setup.tsx  Status.tsx  StatusMonitor.tsx  SystemConfig.tsx  Toast.tsx  global-shims.ts  index.ejs  index.tsx  preload.d.ts  util.d.ts  video.d.ts
(+91 files in other folders)
